--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "REACT_APP_API_URL='http://192.168.31.241:8080' react-scripts start",
+    "start": "REACT_APP_API_HOST='http://192.168.31.241:8080' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
