--- a/package.json
+++ b/package.json
@@ -12,16 +12,22 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "cleave.js": "^1.6.0",
     "dotenv": "^8.2.0",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-validation": "^0.1.11",
     "react-components-form": "^4.0.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-number-format": "^4.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-text-mask": "^5.4.3",
     "react-validation": "^3.0.7",
+    "text-mask-addons": "^3.8.0",
     "validator": "^13.5.2",
     "web-vitals": "^1.1.0"
   },
