--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "formik": "^2.2.6",
     "moment": "^2.29.1",
     "react": "^17.0.1",
+    "react-autosuggest": "^10.1.0",
+    "react-autosuggestions": "^3.1.0",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-bootstrap-validation": "^0.1.11",
     "react-components-form": "^4.0.0",
     "react-datepicker": "^3.4.1",
