--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-datepicker": "^3.5.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
     "react-number-format": "^4.4.4",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-text-mask": "^5.4.3",
