--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "doctr",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -39,7 +42,7 @@
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "REACT_APP_API_HOST='http://192.168.31.241:8080' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
