--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "REACT_APP_API_HOST='http://192.168.31.241:8080' react-scripts start",
+    "start": "set REACT_APP_API_HOST=http://localhost:8080&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
