--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "start": "set REACT_APP_API_HOST=http://localhost:8080&& react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=512 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
