feat: node ver 16

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "doctr",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
