--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -1,5 +1,23 @@
 server {
   listen 80;
+  server_name www.doctr.space doctr.space;
+
+  location / {
+    return 301 https://$host$request_uri;
+  }
+
+  error_page   500 502 503 504  /50x.html;
+  location = /50x.html {
+    root   /usr/share/nginx/html;
+  }
+}
+
+server {
+    listen 443 ssl;
+    server_name www.doctr.space doctr.space;
+
+    ssl_certificate /etc/letsencrypt/live/doctr.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/doctr.space/privkey.pem;
 
   location / {
     root   /usr/share/nginx/html;
