--- a/conf/conf.d/default.conf
+++ b/conf/conf.d/default.conf
@@ -6,6 +6,12 @@ server {
     return 301 https://$host$request_uri;
   }
 
+  location /health {
+    access_log off;
+    add_header 'Content-Type' 'application/json';
+    return 200 '{"status":"UP"}';
+  }
+
   error_page   500 502 503 504  /50x.html;
   location = /50x.html {
     root   /usr/share/nginx/html;
